Fixed navbar spacing bug and converted ' to html entity.

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,6 +1,8 @@
 body {
     background-color: #F76902;
     font-family: "Arial";
+    margin-left: 0;
+    margin-right: 0;
 }
 
 a {
